[tool.poetry]
name = "dressup"
version = "0.1.0"
description = "Dress up"
authors = ["Paulo S. Costa <Paulo.S.Costa.5@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pscosta5/dressup"
repository = "https://github.com/pscosta5/dressup"
documentation = "https://dressup.readthedocs.io"
include = ["dressup/translator.toml"]

[tool.poetry.urls]
Changelog = "https://github.com/pscosta5/dressup/releases"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}
typer = ">=0.1.1,<0.3.0"
colorama = "^0.4.3"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"
mypy = "^0.770"
pytype = {version = "^2020.4.22", python = ">=3.6,<3.8"}
flake8-annotations = "^2.0.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
xdoctest = "^0.11.0"
sphinx = "^3.0.3"
recommonmark = "^0.6.0"
pep8-naming = "^0.10.0"
flake8-rst-docstrings = "^0.0.13"
pytest-mock = "^3.1.0"
rope = "^0.16.0"
sphinx-autobuild = "^0.7.1"
sphinx-material = "^0.0.26"

[tool.poetry.scripts]
dressup = "dressup.console:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dressup"]
omit = ["*/dressup/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
