[tool.poetry]
name = "dressup"
version = "0.1.1"
description = "Dress up"
authors = ["Paulo S. Costa <Paulo.S.Costa.5@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pscosta5/dressup"
repository = "https://github.com/pscosta5/dressup"
documentation = "https://dressup.readthedocs.io"
include = ["dressup/translator.toml"]

[tool.poetry.urls]
Changelog = "https://github.com/pscosta5/dressup/releases"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}
typer = "^0.3.0"
colorama = "^0.4.3"
toml = "^0.10.1"
rich = ">=1.2.2,<8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-black = "^0.2.0"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"
mypy = "^0.782"
pytype = {version = "^2021.2.9", python = ">=3.6,<3.8"}
flake8-annotations = "^2.0.0"
typeguard = "^2.9.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.1"
xdoctest = "^0.13.0"
sphinx = "^3.1.1"
recommonmark = "^0.6.0"
pep8-naming = "^0.11.1"
flake8-rst-docstrings = "^0.0.13"
pytest-mock = "^3.1.1"
rope = "^0.17.0"
sphinx-autobuild = "^0.7.1"
sphinx-material = "^0.0.30"

[tool.poetry.scripts]
dressup = "dressup.console:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dressup"]
omit = ["*/dressup/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
