[tool.poetry]
name = "dressup"
version = "0.1.2"
description = "Dress up"
authors = ["Paulo S. Costa <Paulo.S.Costa.5@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pscosta5/dressup"
repository = "https://github.com/pscosta5/dressup"
documentation = "https://dressup.readthedocs.io"
include = ["dressup/translator.toml"]

[tool.poetry.urls]
Changelog = "https://github.com/pscosta5/dressup/releases"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
importlib-metadata = "^5.1.0"
typer = "^0.7.0"
colorama = "^0.4.6"
toml = "^0.10.2"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dressup = "dressup.console:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^22.10.0"
flake8-black = "^0.3.5"
flake8-import-order = "^0.18.2"
flake8-bugbear = "^22.10.27"
flake8-bandit = "^4.1.1"
safety = "^2.3.2"
mypy = "^0.991"
pytype = "^2022.11.18"
flake8-annotations = "^2.9.1"
typeguard = "^2.13.3"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.1.0"
sphinx = "^5.3.0"
recommonmark = "^0.7.1"
pep8-naming = "^0.13.2"
flake8-rst-docstrings = "^0.3.0"
pytest-mock = "^3.10.0"
rope = "^1.5.1"
sphinx-autobuild = "^2021.3.14"
sphinx-material = "^0.0.35"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dressup"]
omit = ["*/dressup/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
